--- a/BML/Part1_master.css
+++ b/BML/Part1_master.css
@@ -2,8 +2,8 @@ h1 {
 color: blue;
 }
 li{color: rgb(172, 255, 51) }
-p{color: #338AFF}
-h3{color: rgb(255, 51, 225)}
+p{color: #338AFF;}
+h3{color: #AEFEFF;}
 body{background-image: url("BML.JPG")
 }
 a{color: #6C33FF}
